# MailSender

./: .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py  0002_alter_post_image.py
config/: settings.py  urls.py
fixtures/: customers.json  mailing.json  mailtext.json
mailsender/: admin.py  forms.py  models.py  urls.py  views.py
mailsender/migrations/: 0001_initial.py  0002_customer_mailing_list_logs_mailing_id_and_more.py  0003_alter_mailing_status.py  0004_alter_logs_mailing_id.py  0005_remove_mailing_mailing_time_mailing_mailing_datetime.py  0006_alter_mailing_mailing_datetime.py  0007_rename_mailing_id_mailtext_mailing.py  0008_mailing_creator.py  0009_alter_mailing_creator.py  0010_alter_mailing_mailing_datetime.py  0011_alter_mailing_status.py  0012_customer_creator.py  0013_mailtext_creator.py  0014_remove_mailtext_mailing_mailing_messages.py  0015_remove_customer_mailing_list_mailing_customers.py  0016_alter_customer_creator_alter_mailing_customers_and_more.py  0017_alter_mailing_once.py  0018_mailtext_mailings.py  0019_alter_mailtext_mailings.py  0020_remove_mailtext_mailings.py  0021_alter_mailing_customers.py  0022_alter_mailing_every_day.py  0023_mailing_date_of_last_sending.py  0024_remove_logs_mailing_id_mailing_logs.py  0025_alter_logs_datetime_of_last_mailing.py  0026_alter_logs_datetime_of_last_mailing.py  0027_alter_logs_status.py
mailsender/templates/: mailing_update.html
scripts/: cron.py
static/js/: day_select.js
users/: admin.py  fomrs.py  models.py  services.py  urls.py  views.py
(+25 files in other folders)
