[tool.poetry]
name = "coursepaper6"
version = "0.1.0"
description = ""
authors = ["Zhorik Zeniuk <ZhorikZeniuk@gmail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
psycopg2-binary = "^2.9.6"
ipython = "^8.14.0"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
schedule = "^1.2.0"
redis = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
